@@ -4,6 +4,8 @@ Changelog
 3.0.1 - unreleased
 ------------------
 
+- Use the standard libraries doctest module.
+  [hannosch]
 
 3.0 - 2010-07-01
 ----------------
